--- a/debian/dkms.conf.in
+++ b/debian/dkms.conf.in
@@ -2,7 +2,7 @@ PACKAGE_VERSION="#CVERSION#"
 
 # Items below here should not have to change with each driver version
 PACKAGE_NAME="dahdi"
-MAKE[0]="(make modules KERNVER=$kernelver MODULES_EXTRA='dahdi_dummy' ;make;make firmware-loaders;echo : > drivers/dahdi/vpmadt032_loader/.vpmadt032_x86_32.o.cmd;echo : > drivers/dahdi/vpmadt032_loader/.vpmadt032_x86_64.o.cmd;make)"
+MAKE[0]="(make modules KERNVER=$kernelver ;make;make firmware-loaders;echo : > drivers/dahdi/vpmadt032_loader/.vpmadt032_x86_32.o.cmd;echo : > drivers/dahdi/vpmadt032_loader/.vpmadt032_x86_64.o.cmd;make)"
 #Do not make clean, because Sangoma drivers need Module.symvers
 CLEAN="/bin/true"
 #CLEAN="make KERNVER=$kernelver clean"
@@ -10,125 +10,121 @@ CLEAN="/bin/true"
 #MAKE[0]="make modules KERNVER=$kernelver DOWNLOAD=echo"
 #CLEAN="make KERNVER=$kernelver clean DOWNLOAD=echo"
 
-BUILT_MODULE_NAME[0]="dahdi_dummy"
+BUILT_MODULE_NAME[0]="dahdi_dynamic_eth"
 BUILT_MODULE_LOCATION[0]="drivers/dahdi/"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[1]="dahdi_dynamic_eth"
+BUILT_MODULE_NAME[1]="dahdi_dynamic"
 BUILT_MODULE_LOCATION[1]="drivers/dahdi/"
 DEST_MODULE_LOCATION[1]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[2]="dahdi_dynamic"
+BUILT_MODULE_NAME[2]="dahdi_dynamic_loc"
 BUILT_MODULE_LOCATION[2]="drivers/dahdi/"
 DEST_MODULE_LOCATION[2]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[3]="dahdi_dynamic_loc"
+BUILT_MODULE_NAME[3]="dahdi_echocan_jpah"
 BUILT_MODULE_LOCATION[3]="drivers/dahdi/"
 DEST_MODULE_LOCATION[3]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[4]="dahdi_echocan_jpah"
+BUILT_MODULE_NAME[4]="dahdi_echocan_kb1"
 BUILT_MODULE_LOCATION[4]="drivers/dahdi/"
 DEST_MODULE_LOCATION[4]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[5]="dahdi_echocan_kb1"
+BUILT_MODULE_NAME[5]="dahdi_echocan_mg2"
 BUILT_MODULE_LOCATION[5]="drivers/dahdi/"
 DEST_MODULE_LOCATION[5]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[6]="dahdi_echocan_mg2"
+BUILT_MODULE_NAME[6]="dahdi_echocan_sec2"
 BUILT_MODULE_LOCATION[6]="drivers/dahdi/"
 DEST_MODULE_LOCATION[6]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[7]="dahdi_echocan_sec2"
+BUILT_MODULE_NAME[7]="dahdi_echocan_sec"
 BUILT_MODULE_LOCATION[7]="drivers/dahdi/"
 DEST_MODULE_LOCATION[7]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[8]="dahdi_echocan_sec"
+BUILT_MODULE_NAME[8]="dahdi"
 BUILT_MODULE_LOCATION[8]="drivers/dahdi/"
 DEST_MODULE_LOCATION[8]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[9]="dahdi"
+BUILT_MODULE_NAME[9]="dahdi_transcode"
 BUILT_MODULE_LOCATION[9]="drivers/dahdi/"
 DEST_MODULE_LOCATION[9]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[10]="dahdi_transcode"
+BUILT_MODULE_NAME[10]="pciradio"
 BUILT_MODULE_LOCATION[10]="drivers/dahdi/"
 DEST_MODULE_LOCATION[10]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[11]="pciradio"
+BUILT_MODULE_NAME[11]="tor2"
 BUILT_MODULE_LOCATION[11]="drivers/dahdi/"
 DEST_MODULE_LOCATION[11]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[12]="tor2"
-BUILT_MODULE_LOCATION[12]="drivers/dahdi/"
+BUILT_MODULE_NAME[12]="wcb4xxp"
+BUILT_MODULE_LOCATION[12]="drivers/dahdi/wcb4xxp/"
 DEST_MODULE_LOCATION[12]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[13]="wcb4xxp"
-BUILT_MODULE_LOCATION[13]="drivers/dahdi/wcb4xxp/"
+BUILT_MODULE_NAME[13]="wcfxo"
+BUILT_MODULE_LOCATION[13]="drivers/dahdi/"
 DEST_MODULE_LOCATION[13]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[14]="wcfxo"
+BUILT_MODULE_NAME[14]="wct1xxp"
 BUILT_MODULE_LOCATION[14]="drivers/dahdi/"
 DEST_MODULE_LOCATION[14]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[15]="wct1xxp"
-BUILT_MODULE_LOCATION[15]="drivers/dahdi/"
+BUILT_MODULE_NAME[15]="wct4xxp"
+BUILT_MODULE_LOCATION[15]="drivers/dahdi/wct4xxp/"
 DEST_MODULE_LOCATION[15]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[16]="wct4xxp"
-BUILT_MODULE_LOCATION[16]="drivers/dahdi/wct4xxp/"
+BUILT_MODULE_NAME[16]="wctc4xxp"
+BUILT_MODULE_LOCATION[16]="drivers/dahdi/wctc4xxp/"
 DEST_MODULE_LOCATION[16]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[17]="wctc4xxp"
-BUILT_MODULE_LOCATION[17]="drivers/dahdi/wctc4xxp/"
+BUILT_MODULE_NAME[17]="wctdm"
+BUILT_MODULE_LOCATION[17]="drivers/dahdi/"
 DEST_MODULE_LOCATION[17]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[18]="wctdm"
-BUILT_MODULE_LOCATION[18]="drivers/dahdi/"
+BUILT_MODULE_NAME[18]="wctdm24xxp"
+BUILT_MODULE_LOCATION[18]="drivers/dahdi/wctdm24xxp/"
 DEST_MODULE_LOCATION[18]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[19]="wctdm24xxp"
-BUILT_MODULE_LOCATION[19]="drivers/dahdi/wctdm24xxp/"
+BUILT_MODULE_NAME[19]="wcte11xp"
+BUILT_MODULE_LOCATION[19]="drivers/dahdi/"
 DEST_MODULE_LOCATION[19]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[20]="wcte11xp"
-BUILT_MODULE_LOCATION[20]="drivers/dahdi/"
+BUILT_MODULE_NAME[20]="wcte12xp"
+BUILT_MODULE_LOCATION[20]="drivers/dahdi/wcte12xp/"
 DEST_MODULE_LOCATION[20]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[21]="wcte12xp"
-BUILT_MODULE_LOCATION[21]="drivers/dahdi/wcte12xp/"
+BUILT_MODULE_NAME[21]="xpd_fxo"
+BUILT_MODULE_LOCATION[21]="drivers/dahdi/xpp/"
 DEST_MODULE_LOCATION[21]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[22]="xpd_fxo"
+BUILT_MODULE_NAME[22]="xpd_fxs"
 BUILT_MODULE_LOCATION[22]="drivers/dahdi/xpp/"
 DEST_MODULE_LOCATION[22]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[23]="xpd_fxs"
+BUILT_MODULE_NAME[23]="xpd_pri"
 BUILT_MODULE_LOCATION[23]="drivers/dahdi/xpp/"
 DEST_MODULE_LOCATION[23]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[24]="xpd_pri"
+BUILT_MODULE_NAME[24]="xpp"
 BUILT_MODULE_LOCATION[24]="drivers/dahdi/xpp/"
 DEST_MODULE_LOCATION[24]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[25]="xpp"
+BUILT_MODULE_NAME[25]="xpp_usb"
 BUILT_MODULE_LOCATION[25]="drivers/dahdi/xpp/"
 DEST_MODULE_LOCATION[25]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[26]="xpp_usb"
+BUILT_MODULE_NAME[26]="xpd_bri"
 BUILT_MODULE_LOCATION[26]="drivers/dahdi/xpp/"
 DEST_MODULE_LOCATION[26]="/kernel/drivers/telephony/dahdi"
 
-BUILT_MODULE_NAME[27]="xpd_bri"
-BUILT_MODULE_LOCATION[27]="drivers/dahdi/xpp/"
-DEST_MODULE_LOCATION[27]="/kernel/drivers/telephony/dahdi"
+BUILT_MODULE_NAME[27]="dahdi_voicebus"
+BUILT_MODULE_LOCATION[27]="drivers/dahdi/voicebus/"
+DEST_MODULE_LOCATION[27]="/kernel/drivers/telephony/dahdi/voicebus"
 
-BUILT_MODULE_NAME[28]="dahdi_voicebus"
-BUILT_MODULE_LOCATION[28]="drivers/dahdi/voicebus/"
-DEST_MODULE_LOCATION[28]="/kernel/drivers/telephony/dahdi/voicebus"
-
-#Added by Debian / Ubuntu 
-BUILT_MODULE_NAME[29]="dahdi_vpmadt032_loader"
-BUILT_MODULE_LOCATION[29]="drivers/dahdi/"
-DEST_MODULE_LOCATION[29]="/kernel/drivers/telephony/dahdi"
+#Added by Debian / Ubuntu
+BUILT_MODULE_NAME[28]="dahdi_vpmadt032_loader"
+BUILT_MODULE_LOCATION[28]="drivers/dahdi/"
+DEST_MODULE_LOCATION[28]="/kernel/drivers/telephony/dahdi"
 
 AUTOINSTALL=yes
