Update project config.

--- a/project.config
+++ b/project.config
@@ -1,4 +1,12 @@
-[receive]
-	requireChangeId = true
+[access "refs/heads/*"]
+        label-Approved = +0..+1 group dahdi-linux-core
+        label-Code-Review = -2..+2 group dahdi-linux-core
+[access "refs/tags/*"]
+        create = group dahdi-linux-core
+        pushTag = group dahdi-linux-core
 [project]
-	state = active
+        state = active
+[receive]
+        requireChangeId = true
+[submit]
+        mergeContent = true
